navbar alignment fix

--- a/style.css
+++ b/style.css
@@ -362,7 +362,11 @@ nav ul li:first-child a {
     height: 100%;
     margin-top: 60px;
   }
+  nav ul li:first-child a {
+    margin-top: 10px;
 
+    
+  }
   .container {
     display: flex;
     flex-direction: column;
